Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.0 Beta 3
-
None
-
Linux, Bluez 5.48, Qt 5.12 beta3.
-
-
8d279a05f2570ae1b964c90efd9a5bf2ce154b76 (qt/qtconnectivity/5.12.0)
Description
When doing a BTLE scan under Linux the QBluetoothDeviceDiscoveryAgent::deviceUpdated signal is never emitted, although bluez reports lots of RSSI changes (which is observed using dbus-monitor).
When enabling the qt.bluetooth.bluez logging, the string "Updating RSSI for" is also never printed, which corresponds with the fact that QBluetoothDeviceDiscoveryAgent::deviceUpdated is never emitted.
Also any changed manufacturer data is not reflected in the discoveredDevices list, leading me to suspect that the _q_PropertiesChanged function is never called or at least in such a way that the device is not found in the discoveredDevices list.