Fix regression not updating the device info during BTLE discovery

This is a regression introduced by
819bb06c2cb3372cb1bb9ddd7f3a504f78d3452d.

The object context was missing and subsequent calls to QObject::sender()
failed. As a consequence the signalling for the device updates never
happened.

Fixes: QTBUG-71479
Change-Id: I6f057912a9321969b59ded8b0a3e5602653e5f2e
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>